Rifinitura e completamento swagger
