# backend/app/routes/beach.routes.js
@@ -1,0 +1,18 @@
+const { authJwt } = require("../middleware");
+const controller = require("../controllers/beach.controller");
+
+module.exports = function(app) {
+  app.use(function(req, res, next) {
+    res.header(
+      "Access-Control-Allow-Headers",
+      "x-access-token, Origin, Content-Type, Accept"
+    );
+    next();
+  });
+
+  app.get(
+    "/api/beach",
+    [authJwt.verifyToken],
+    controller.readBeaches
+  );
+};
